Compile functionality successfully added in code.html and related file changes for execution of command in Windows.